XWIKI-12164: Make the Extension History available when the wiki is empty * Allow the users to access the Extension History from the Distribution Wizard.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/buttonGroup.css
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/resources/uicomponents/widgets/buttonGroup.css
@@ -70,6 +70,11 @@
   z-index: 200;
 }
 
+.button-group.align-right > .dropdown-menu {
+  left: auto;
+  right: 0;
+}
+
 /* IE discards the :target selector and thus we have to duplicate the rule.. */
 .button-group > .dropdown-menu:target {
   display: block;
