--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/suggest.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/suggest.vm
@@ -22,7 +22,7 @@ $response.setContentType("text/xml")
     #set($input = $i.trim())
   #end
 #end
-#set($input = $input.replaceAll('[\[_%]', '_$0'))
+#set($input = $input.replaceAll('[\[_%!]', '!$0'))
 ##
 ######################### User hibernate query
 #if("$!hibquery" != "")
@@ -36,11 +36,11 @@ $response.setContentType("text/xml")
   #end
   #set($whereidx = $hibquery.toLowerCase().indexOf("where"))
   #if($whereidx < 0)
-    #set($like = " where lower("+ $likeCol.replaceAll("[^a-zA-Z0-9_.]", "") + ") like ? ESCAPE '_'")
+    #set($like = " where lower("+ $likeCol.replaceAll("[^a-zA-Z0-9_.]", "") + ") like ? ESCAPE '!'")
     #set($hibquery = $hibquery.concat($like))
   #else
     #set($whereidx = $whereidx + 5)
-    #set($like = " lower("+ $likeCol.replaceAll("[^a-zA-Z0-9_.]", "") + ") like ? ESCAPE '_' and")
+    #set($like = " lower("+ $likeCol.replaceAll("[^a-zA-Z0-9_.]", "") + ") like ? ESCAPE '!' and")
     #set($hibquery = "${hibquery.substring(0, $whereidx)}${like}${hibquery.substring($whereidx)}")
   #end
   #set($results = $xwiki.search($hibquery, 30, 0, ["%${input}%"]))
@@ -64,7 +64,7 @@ $response.setContentType("text/xml")
 #else ## hibquery == ""
   ######################### DBListProperty query
   #if($p.isRelationalStorage() && $p.isMultiSelect())
-    #set($query = "select distinct list from BaseObject as obj, DBStringListProperty as prop join prop.list list where obj.name <> ? and obj.className = ? and prop.id.id = obj.id and prop.id.name = ? and lower(list) like ? ESCAPE '_'")
+    #set($query = "select distinct list from BaseObject as obj, DBStringListProperty as prop join prop.list list where obj.name <> ? and obj.className = ? and prop.id.id = obj.id and prop.id.name = ? and lower(list) like ? ESCAPE '!'")
     #set($queryResult = $xwiki.search($query, 30, 0, [${templatename}, ${classname}, ${fieldname}, "%${input}%"]))
     #set($results = $queryResult.toArray())
     <?xml version="1.0" encoding="UTF-8"?>
@@ -75,7 +75,7 @@ $response.setContentType("text/xml")
     </results>
   ######################### StringListProperty query
   #elseif($p.isMultiSelect())
-    #set($query = "select distinct prop.textValue from BaseObject as obj, StringListProperty as prop where obj.name <> ? and obj.className = ? and prop.id.id = obj.id and prop.name = ? and lower(prop.textValue) like ? ESCAPE '_'")
+    #set($query = "select distinct prop.textValue from BaseObject as obj, StringListProperty as prop where obj.name <> ? and obj.className = ? and prop.id.id = obj.id and prop.name = ? and lower(prop.textValue) like ? ESCAPE '!'")
     #set($queryResult = $xwiki.search($query, 30, 0, [${templatename}, ${classname}, ${fieldname}, "%${input}%"]))
     #set($results = $queryResult.toArray())
     <?xml version="1.0" encoding="UTF-8"?>
@@ -90,7 +90,7 @@ $response.setContentType("text/xml")
     </results>
   ######################### StringProperty query
   #else
-    #set($query = "select distinct prop.value from BaseObject as obj, StringProperty as prop where obj.className = ? and obj.name <> ? and prop.id.id = obj.id and prop.id.name = ? and lower(prop.value) like ? ESCAPE '_'")
+    #set($query = "select distinct prop.value from BaseObject as obj, StringProperty as prop where obj.className = ? and obj.name <> ? and prop.id.id = obj.id and prop.id.name = ? and lower(prop.value) like ? ESCAPE '!'")
     #set($queryResult = $xwiki.search($query.toString(), 30, 0, [${classname}, ${templatename}, ${fieldname}, "%${input}%"]))
     #set($results = $queryResult.toArray())
     <?xml version="1.0" encoding="UTF-8"?>
