--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/suggest.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/suggest.vm
@@ -43,7 +43,7 @@ $response.setContentType("text/xml")
     #set($like = " lower("+ $likeCol.replaceAll("[^a-zA-Z0-9_.]", "") + ") like ? ESCAPE '!' and")
     #set($hibquery = "${hibquery.substring(0, $whereidx)}${like}${hibquery.substring($whereidx)}")
   #end
-  #set($results = $xwiki.search($hibquery, 30, 0, ["%${input}%"]))
+  #set($results = $services.query.hql($hibquery).setLimit(30).bindValue(0, "%${input}%").execute())
   <?xml version="1.0" encoding="UTF-8"?>
   <results type="${resultsType}">
   #foreach($res in $results)
@@ -65,7 +65,7 @@ $response.setContentType("text/xml")
   ######################### DBListProperty query
   #if($p.isRelationalStorage() && $p.isMultiSelect())
     #set($query = "select distinct list from BaseObject as obj, DBStringListProperty as prop join prop.list list where obj.name <> ? and obj.className = ? and prop.id.id = obj.id and prop.id.name = ? and lower(list) like ? ESCAPE '!'")
-    #set($queryResult = $xwiki.search($query, 30, 0, [${templatename}, ${classname}, ${fieldname}, "%${input}%"]))
+    #set($queryResult = $services.query.hql($query).setLimit(30).bindValues([${templatename}, ${classname}, ${fieldname}, "%${input}%"]).execute())
     #set($results = $queryResult.toArray())
     <?xml version="1.0" encoding="UTF-8"?>
     <results type="3">
@@ -76,7 +76,7 @@ $response.setContentType("text/xml")
   ######################### StringListProperty query
   #elseif($p.isMultiSelect())
     #set($query = "select distinct prop.textValue from BaseObject as obj, StringListProperty as prop where obj.name <> ? and obj.className = ? and prop.id.id = obj.id and prop.name = ? and lower(prop.textValue) like ? ESCAPE '!'")
-    #set($queryResult = $xwiki.search($query, 30, 0, [${templatename}, ${classname}, ${fieldname}, "%${input}%"]))
+    #set($queryResult = $services.query.hql($query).setLimit(30).bindValues([${templatename}, ${classname}, ${fieldname}, "%${input}%"]).execute())
     #set($results = $queryResult.toArray())
     <?xml version="1.0" encoding="UTF-8"?>
     <results type="5">
@@ -91,7 +91,7 @@ $response.setContentType("text/xml")
   ######################### StringProperty query
   #else
     #set($query = "select distinct prop.value from BaseObject as obj, StringProperty as prop where obj.className = ? and obj.name <> ? and prop.id.id = obj.id and prop.id.name = ? and lower(prop.value) like ? ESCAPE '!'")
-    #set($queryResult = $xwiki.search($query.toString(), 30, 0, [${classname}, ${templatename}, ${fieldname}, "%${input}%"]))
+    #set($queryResult = $services.query.hql($query).setLimit(30).bindValues([${classname}, ${templatename}, ${fieldname}, "%${input}%"]).execute())
     #set($results = $queryResult.toArray())
     <?xml version="1.0" encoding="UTF-8"?>
     <results type="8">
