--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -658,9 +658,9 @@ extension.oldflavors=$oldFlavor.trim()
 #-------------------------------------------------------------------------------------
 
 #-# [Since 5.4.4]
-#-# Add a default suffix to the alias of a new wiki in the wiki creation wizard, only when the path mode is used
-#-# (see url.standard.multiwiki.isPathBased). If this value is empty, XWiki will try to compute it automatically from
-#-# request URL.
+#-# Add a default suffix to the alias of a new wiki in the wiki creation wizard, only when the path mode is not used
+#-# (i.e. domain-based, see url.standard.multiwiki.isPathBased). If this value is empty, XWiki will try to compute it
+#-# automatically from the request URL.
 #-#
 #-# eg: if wiki.alias.suffix is "xwiki.org" and the wiki name is "playground"
 #-#     then the computed alias will be: "playground.xwiki.org".
