XWIKI-12257: Missing styling for ## syntax (.monospace class)
(cherry picked from commit fb545de8bc603cd51f5de6a8099f55e4e038b529)

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/general.less
@@ -85,7 +85,7 @@ pre { /* Resetting values from bootstrap/code.less and bootstrap/normalize.less,
   padding: 0;
 }
 
-.code, .code pre, .code *  {
+.code, .code pre, .code *, .monospace  {
   font-family: @font-family-monospace;
   white-space: pre;
 }
