XWIKI-10804: 'Copy' menu entry is displayed even if the users can't 'Edit' and 'Delete'

--- a/xwiki-platform-core/xwiki-platform-colibri/src/main/resources/colibri/menuview.vm
+++ b/xwiki-platform-core/xwiki-platform-colibri/src/main/resources/colibri/menuview.vm
@@ -297,7 +297,7 @@
 ## Page
 ##
 #set ($canView = !$doc.isNew() && $xwiki.hasAccessLevel('view'))
-#set ($canCopy = $canView && $hasCreatePage)
+#set ($canCopy = $canView && $hasCreatePage && $xwiki.hasAccessLevel('edit'))
 #set ($canDelete = !$doc.isNew() && $xwiki.hasAccessLevel('delete'))
 #set ($canShare = $canView && $xwiki.exists('XWiki.SharePage') && !$isGuest)
 #set ($canWatch = !$doc.isNew() && $hasWatch)
