XWIKI-12299: Deprecate XWiki.parseContent since it is misleading and outdated - Deprecaed both core and api methods - Replaced their usage in xwiki-plaform with #evaluate

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/footer.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/footer.vm
@@ -6,7 +6,8 @@
     #set ($version = $xwiki.getXWikiPreference("version"))
   #end
   #if ("$!version" != "")
-    #set ($version = $xwiki.parseContent($version))
+    ## The version information coming from preferences is usually Velocity code, so make sure to evaluate it.
+    #set ($version = "#evaluate($version)")
   #else
     #set ($version = $!xwiki.version)
   #end
