--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/shareinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/shareinline.vm
@@ -91,7 +91,8 @@
     #set ($fullMessage = $xwiki.getDocument('XWiki.SharePage').getObject('XWiki.Mail', 'language', $xcontext.language, true).getProperty('html').value)
     #set ($fullMessage = $fullMessage.replace('${recipientName}', $services.localization.render('core.viewers.share.recipientPlaceholder')))
     #set ($fullMessage = $fullMessage.replaceAll('<pre[^>]*+>[^<]*+</pre>', $message))
-    #set ($fullMessage = $xwiki.parseContent($fullMessage))
+    ## Evaluate the template's content since it contains Velocity code.
+    #set ($fullMessage = "#evaluate($fullMessage)")
 
     <dt><label for="message">$services.localization.render('core.viewers.share.messagePreviewLabel')</label></dt>
     <dd class='mail-preview'>$fullMessage</dd>
