--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/xwikivars.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/xwikivars.vm
@@ -106,7 +106,7 @@
 #end
 #set ($skin = $xwiki.getSkin())
 ## Compute the copyright and evaluate its content with Velocity to allow users to put some scripts inside
-#set ($copyright = $xwiki.parseContent($xwiki.getSpaceCopyright()))
+#set ($copyright = "#evaluate($xwiki.getSpaceCopyright())")
 #set ($xwikimode = $xcontext.getMode())
 #set ($logredir = $escapetool.xml($xwiki.relativeRequestURL))
 ##
