XWIKI-12171: Add a script right to manage script macro execution permissions - Fixed failing test by properly applying the AdminSheet in space administration for an unexistent WebPreferences document. -- The previous getRenderedContent approach was not setting the right sdoc.

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/admin.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/admin.vm
@@ -68,7 +68,8 @@
 #else
   #if ($xwiki.exists('XWiki.AdminSheet'))
     #set ($importaction = '')
-    $xwiki.getDocument('XWiki.AdminSheet').getTranslatedDocument().getRenderedContent()
+    ## Display the current document with the XWiki.AdminSheet that is already bound to the XWikiPreferences class.
+    $services.display.content($doc)
   #else
     ## Admin app not installed, display only Import
     #set ($importaction = $doc.getURL('import'))
