XWIKI-12220: Adapt the breadcrumb to display the document hierarchy based on nested spaces.
* This commit introduces:
** a "core.useLegacyParentChildMechanism" property to use or not the hierarchy based on legacy parent/child relationship
** a "parentchild" script service to get the legacy parents of a document and to get if the legacy mechanism is used or not
** the support of both modes in flamingo
** use the home icon for the Main space
* This first version does not hide some parts of the breadcrumb if it is too long
* This commits does not fix the failing functional tests

--- a/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
+++ b/xwiki-platform-tools/xwiki-platform-tool-configuration-resources/src/main/resources/xwiki.properties.vm
@@ -55,6 +55,12 @@
 #-# Default value is 100.
 # core.renderingcache.size=100
 
+#-# [Since 7.2M2]
+#-# Define if the legacy parent/child mechanism is used (for example, to display the hierarchy between documents).
+#-# It has been replaced by the concept of nested documents in XWiki 7.2. This property is for retro-compatibility
+#-# reason. The default value is false.
+# core.useLegacyParentChildMechanism=true
+
 #-------------------------------------------------------------------------------------
 # Environment
 #-------------------------------------------------------------------------------------
