--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
@@ -1,35 +1,79 @@
 #template('xwikivars.vm')
-#set($parents = [])
-#set($discard = $parents.add($doc.fullName))
-#macro(computeHierarchy $doc $result $level)
-  #set($parent = $doc.parent)
-  #if(($parent != '') && ($level < 6) && (!$parents.contains($parent)))
-    #set($discard = $parents.add($parent))
-    #set($pdoc = $xwiki.getDocument($parent))
-    #if ($pdoc)
-      #set ($pdocurl = $pdoc.getURL('view'))
-      #set ($nstring = "<li><a href='$pdocurl'>$escapetool.xml(${pdoc.translatedDocument.plainTitle})</a></li>$result")
-      #set ($level = $level + 1)
-      #computeHierarchy($pdoc $nstring $level)
-    #else
-      ## No access to the parent document
-      <li><a href='$xwiki.getURL($parent)'>$escapetool.xml(${parent})</a></li>
-      $result
-    #end
-  #else
-    $result
-  #end
-#end
 #if($isInServletMode) ## Visible only in a page
-  #if("$!doc.parent" !=  '' || $xcontext.action == 'edit' || $xcontext.action == 'inline')
-    <ol id="hierarchy" class="breadcrumb clearfix">
-    #if ($doc.fullName != 'Main.WebHome')
-      #if ($xcontext.action == 'edit' || $xcontext.action == 'inline')
-        #computeHierarchy($doc "<li><a href='${doc.getURL('view')}'>$escapetool.xml($tdoc.getPlainTitle())</a></li>" 0)
-      #else
-        #computeHierarchy($doc "<li class='active'>$escapetool.xml($tdoc.getPlainTitle())</li>" 0)
-      #end
+  #######################################################
+  ##                     GLOBALS
+  #######################################################
+  #set($homeReference = $services.wiki.currentWikiDescriptor.mainPageReference)
+  #######################################################
+  ##                   CONTROLLER
+  ##
+  ## Call the appropiate breadcrumb depending on the 
+  ## configuration.
+  #######################################################
+  #if ($doc.fullName != 'Main.WebHome')
+    #if($services.parentchild.isLegacyParentChildMechanismEnabled())
+      #hierarchy_legacy()
+    #else
+      #hierarchy()
     #end
+  #end
+  #######################################################
+  ##                   BREADCRUMB
+  ##
+  ## Display the parents of a document based on the 
+  ## nested spaces mechanism
+  #######################################################
+  #macro(hierarchy)
+    <ol id="hierarchy" class="breadcrumb clearfix">
+      ## We first display the home page manually because we always want it to be here even if it is not a parent of the
+      ## current document.
+      <li><a href='$xwiki.getURL($homeReference)'><span class="glyphicon glyphicon-home"></span></a></li>
+      #set($homeSpace = $homeReference.lastSpaceReference)
+      #foreach($space in $doc.documentReference.spaceReferences)
+        ## The home has already been displayed
+        #if(!$homeSpace.equals($space))
+          #set($pdoc = $xwiki.getDocument($space))
+          <li><a href='$xwiki.getURL($space)'>$escapetool.xml($pdoc.translatedDocument.plainTitle)</a></li>
+        #end
+      #end
+      #if ($doc.name != 'WebHome')
+        ## Display the current page if it is not a terminal page
+        #hierarchy_currentDoc()
+      #end
     </ol>
+  #end
+  #######################################################
+  ##                LEGACY BREADCRUMB
+  ##
+  ## Display the parents of a document based on the old 
+  ## parent/child mechanism.
+  #######################################################
+  #macro(hierarchy_legacy)
+    #if("$!doc.parent" !=  '' || $xcontext.action == 'edit' || $xcontext.action == 'inline')
+      #set($parents = $services.parentchild.getLegacyParents($doc.documentReference))
+      <ol id="hierarchy" class="breadcrumb clearfix">
+        ## Display the parents
+        #foreach($parent in $parents)
+          #if($homeReference.equals($parent))
+            <li><a href='$xwiki.getURL($homeReference)'><span class="glyphicon glyphicon-home"></span></a></li>
+          #else
+            #set($pdoc = $xwiki.getDocument($parent))
+            <li><a href="$pdoc.getURL('view')">$escapetool.xml($pdoc.translatedDocument.plainTitle)</a></li>
+          #end
+        #end
+        ## Display the current document
+        #hierarchy_currentDoc()
+      </ol>
+    #end
+  #end
+  #######################################################
+  ##   Display the current document in the breadcrumb
+  #######################################################
+  #macro(hierarchy_currentDoc)
+    #if ($xcontext.action == 'edit' || $xcontext.action == 'inline')
+      <li class="active"><a href="$doc.getURL('view')">$escapetool.xml($tdoc.getPlainTitle())</a></li>
+    #else
+      <li class="active">$escapetool.xml($tdoc.getPlainTitle())</li>
+    #end
   #end
 #end
