XWIKI-12220: Adapt the breadcrumb to display the document hierarchy based on nested spaces.
* Minor improvement: support main page set in the wiki descriptor instead of "Main.WebHome"

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
@@ -10,7 +10,7 @@
   ## Call the appropiate breadcrumb depending on the 
   ## configuration.
   #######################################################
-  #if ($doc.fullName != 'Main.WebHome')
+  #if (!$doc.documentReference.equals($homeReference))
     #if($services.parentchild.isLegacyParentChildMechanismEnabled())
       #hierarchy_legacy()
     #else
