XWIKI-12220: Adapt the breadcrumb to display the document hierarchy based on nested spaces.
* Do not display the "edit parent" functionality if the legacy parent/child mechanism is disabled

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/editinline.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/editinline.vm
@@ -16,9 +16,11 @@ $xwiki.ssfx.use('uicomponents/widgets/fullScreen.css', true)##
 #if ($allowDocEdit)
  <form id="inline" method="post" action="$doc.getURL("preview")" class="withLock">
 #end
-## Edit parent button added here explicitly because inline mode is handled specially in edit.vm and does not behave like the other edit modes.
 <div class='edit-meta-tools'>
-  <a id='editParentTrigger' class='tool edit-parent' href='#mainEditArea' title="$services.localization.render('core.editors.content.parentField.edit.title')">[$services.localization.render('core.editors.content.parentField.edit')]</a>
+  #if($services.parentchild.isLegacyParentChildMechanismEnabled())
+    ## Edit parent button added here explicitly because inline mode is handled specially in edit.vm and does not behave like the other edit modes.
+    <a id='editParentTrigger' class='tool edit-parent' href='#mainEditArea' title="$services.localization.render('core.editors.content.parentField.edit.title')">[$services.localization.render('core.editors.content.parentField.edit')]</a>
+  #end
 </div>
 #template("hierarchy.vm")
 <div class="row">
